cert-manager/nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example
spec:
  rules:
    - host: test.hwchiu.com
      http:
        paths:
          - backend:
              serviceName: helloworld-service
              servicePort: 3000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
 #tls:
 #    - hosts:
 #        - #test.hwchiu.com
 #      secretName: hwchiu-demo-tls
